added database session file

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-   PORT=5000
+   PORT=3306
    DB_HOST=localhost
    DB_USER=root
-   DB_PASSWORD=Mybook1997*
+   DB_PASSWORD=MyMedy
    DB_NAME=my_medy_db
    JWT_SECRET=your_jwt_secret_key
    STRIPE_SECRET_KEY=your_stripe_secret_key
